@@ -1,3 +1,3 @@
 <p><a class="externallink" rel="nofollow" href="http://example.com">http://example.com</a></p>
-<p>http://example.com</p>
+<p>example.com</p>
 <p><br /></p>
