@@ -1,1 +1,1 @@
-<p>content = http://example.com</p>
+<p>content = example.com</p>
