@@ -3,6 +3,10 @@
 
 Bugfixes:
 
+  * The SERVERNAME was previously implemented incorrectly and has been fixed
+    to return only the server URL ("www.example.com") without an "http://"
+    prefix.  Reported by an anonymous user.
+
 
 0.9.3
 =====
